--- a/proyectos/slim-api/.docker/nginx/conf.d/php.conf
+++ b/proyectos/slim-api/.docker/nginx/conf.d/php.conf
@@ -1,21 +1,27 @@
 server {
     server_name api.docker.local;
     index index.php;
-    error_log /var/www/php/slim/log/error.log;
-    access_log /var/www/php/slim/log/access.log;
-    root /var/www/php/slim/public;
+    error_log /var/www/php/slim/public/error.log;
+    access_log /var/www/php/slim/public/access.log;
+    root /var/www/php/slim/public/;
 
     location / {
         try_files $uri /index.php$is_args$args;
     }
 
     location ~* \.php$ {
-        fastcgi_pass   php:9000;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
+        fastcgi_pass   php:9000;
+        
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.php break;
+        }
+        
+        
     }
 }
